# standalone-camera-classify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  standalone_camera_classify.py  standalone_camera_classify_settings.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  reference.rst.txt
docs/tutorials/: tutorial.md
model/: image_model.joblib  label_encoder.joblib  training_report.json
tests/: runtest.py  standalone_camera_classify_tests.py
